// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser does not allow "true", "false", or "null" as Enum value 1`] = `
Object {
  "locations": Array [
    Object {
      "column": 21,
      "line": 1,
    },
  ],
  "message": "Syntax Error: Expected is reserved and cannot be used for an enum value, found Name \\"true\\".",
}
`;

exports[`Parser does not allow "true", "false", or "null" as Enum value 2`] = `
Object {
  "locations": Array [
    Object {
      "column": 21,
      "line": 1,
    },
  ],
  "message": "Syntax Error: Expected is reserved and cannot be used for an enum value, found Name \\"false\\".",
}
`;

exports[`Parser does not allow "true", "false", or "null" as Enum value 3`] = `
Object {
  "locations": Array [
    Object {
      "column": 21,
      "line": 1,
    },
  ],
  "message": "Syntax Error: Expected is reserved and cannot be used for an enum value, found Name \\"null\\".",
}
`;

exports[`Parser parseType parses nested types 1`] = `
Object {
  "kind": "ListType",
  "loc": Object {
    "end": 9,
    "start": 0,
  },
  "type": Object {
    "kind": "MaybeType",
    "loc": Object {
      "end": 8,
      "start": 1,
    },
    "type": Object {
      "kind": "NamedType",
      "loc": Object {
        "end": 7,
        "start": 1,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 7,
          "start": 1,
        },
        "value": "MyType",
      },
    },
  },
}
`;

exports[`Parser parseType parses optional types 1`] = `
Object {
  "kind": "MaybeType",
  "loc": Object {
    "end": 7,
    "start": 0,
  },
  "type": Object {
    "kind": "NamedType",
    "loc": Object {
      "end": 6,
      "start": 0,
    },
    "name": Object {
      "kind": "Name",
      "loc": Object {
        "end": 6,
        "start": 0,
      },
      "value": "MyType",
    },
  },
}
`;

exports[`Parser parseValue parses block strings 1`] = `
Object {
  "block": true,
  "kind": "StringValue",
  "loc": Object {
    "end": 10,
    "start": 0,
  },
  "value": "long",
}
`;
